# dl-4-fun

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.sh
projects/trl-grpo/: README.md  train.py
