[project]
name = "dl-4-fun"
version = "0.1.0"
description = "Deep learning learning projects container"
requires-python = ">=3.10"
dependencies = [
    "hf-transfer>=0.1.9",
    "trl>=0.26.0", # Latest TRL release - will pull torch, transformers, accelerate, datasets, peft, etc.
    "wandb>=0.23.1",
]
